--- a/HTML/demo.html
+++ b/HTML/demo.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<p>Le Quynh Anh</p>
-<p>This is a paragraph.</p>
-<p>This is a paragraph.</p>
+<h1>Le Quynh Anh</h1>
+
+
 
 </body>
 </html>
