--- a/demo.html
+++ b/demo.html
@@ -1,11 +1,9 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <body>
 
-<h1>Le Quynh Anh</h1>
-
-
+<h2>Le Quynh Anh_2021050074</h2>
+<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
 
 </body>
 </html>
