--- a/demo.html
+++ b/demo.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h2>Le Quynh Anh_2021050074</h2>
-<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+<h2>HTML demo</h2>
+<img src="https://www.w3schools.com/html/img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
 
 </body>
 </html>
