--- a/HTML/demo.html
+++ b/HTML/demo.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Page Title</title>
+</head>
 <body>
 
-<h2> Le Quynh Anh 2021050074</h2>
+<h1>Le Quynh Anh</h1>
+<p>2021050074</p>
+
+</body>
+</html>
+
