--- a/demo.html
+++ b/demo.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Page Title</title>
+</head>
 <body>
 
-<h2>HTML demo</h2>
-<img src="https://www.w3schools.com/html/img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
+<h1>Le Quynh Anh</h1>
+<p>2021050074</p>
 
 </body>
 </html>
