--- a/HTML/demo.html
+++ b/HTML/demo.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
 <body>
 
-<h1>Le Quynh Anh</h1>
-<p>2021050074</p>
+<p>Le Quynh Anh 2021050074</p>
+<p style="color:red;">I am red</p>
+<p style="color:blue;">I am blue</p>
+<p style="font-size:50px;">I am big</p>
 
 </body>
 </html>
