--- a/HTML/demo.html
+++ b/HTML/demo.html
@@ -2,11 +2,10 @@
 <html>
 <body>
 
-<p>Le Quynh Anh 2021050074</p>
-<p style="color:red;">I am red</p>
-<p style="color:blue;">I am blue</p>
-<p style="font-size:50px;">I am big</p>
-
+    <p><b>Le Quynh Anh 2021050074</b></p>
+    <p><i>This text is italic</i></p>  
+    <p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
+    
 </body>
 </html>
 
