--- a/demo.html
+++ b/demo.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Page Title</title>
+</head>
 <body>
 
-    <p><b>Le Quynh Anh 2021050074</b></p>
-    <p><i>This text is italic</i></p>  
-    <p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
-    
+<h1>Le Quynh Anh_2021050074</h1>
+<p>My first paragraph.</p>
+
 </body>
 </html>
 
