--- a/demo.html
+++ b/demo.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
 <body>
 
-<h1>Le Quynh Anh_2021050074</h1>
-<p>This is a paragraph.</p>
+<h1>Le Quynh Anh</h1>
+
+<p>My first paragraph.</p>
 
 </body>
 </html>
+
 
 
 
