--- a/demo.html
+++ b/demo.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
 <html>
 <body>
 
+<h2>The href Attribute</h2>
+
+<p>HTML links are defined with the a tag. The link address is specified in the href attribute:</p>
+
+<a href="https://www.w3schools.com">Visit W3Schools</a>
 <h1>Le Quynh Anh</h1>
-
-<p>My first paragraph.</p>
-
 </body>
 </html>
-
-
 
 
