--- a/demo.html
+++ b/demo.html
@@ -1,13 +1,16 @@
+<!DOCTYPE html>
 <html>
 <body>
 
-<h2>The href Attribute</h2>
+<h2>The style Attribute</h2>
+<p>The style attribute is used to add styles to an element, such as color:</p>
 
-<p>HTML links are defined with the a tag. The link address is specified in the href attribute:</p>
-
-<a href="https://www.w3schools.com">Visit W3Schools</a>
-<h1>Le Quynh Anh</h1>
+<p style="color:red;">This is a red paragraph.</p>
+<h2> Le Quynh Anh</h2>
 </body>
 </html>
+
+
+
 
 
