--- a/demo.html
+++ b/demo.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
 <html>
 <body>
 
-<h2>The style Attribute</h2>
-<p>The style attribute is used to add styles to an element, such as color:</p>
+<h1> Le Quynh Anh</h1>
+<h2>2021050074</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
 
-<p style="color:red;">This is a red paragraph.</p>
-<h2> Le Quynh Anh</h2>
 </body>
 </html>
-
 
 
 
