--- a/demo.html
+++ b/demo.html
@@ -1,16 +1,26 @@
 <html>
 <body>
+<h1>Le Quynh Anh</h1>
+<p>
+This paragraph
+contains a lot of lines
+in the source code,
+but the browser 
+ignores it.
+</p>
 
-<h1> Le Quynh Anh</h1>
-<h2>2021050074</h2>
-<h3>Heading 3</h3>
-<h4>Heading 4</h4>
-<h5>Heading 5</h5>
-<h6>Heading 6</h6>
+<p>
+This paragraph
+contains      a lot of spaces
+in the source     code,
+but the    browser 
+ignores it.
+</p>
+
+<p>
+The number of lines in a paragraph depends on the size of the browser window. If you resize the browser window, the number of lines in this paragraph will change.
+</p>
 
 </body>
 </html>
-
-
-
 
