--- a/demo.html
+++ b/demo.html
@@ -1,26 +1,8 @@
 <html>
 <body>
-<h1>Le Quynh Anh</h1>
-<p>
-This paragraph
-contains a lot of lines
-in the source code,
-but the browser 
-ignores it.
-</p>
 
-<p>
-This paragraph
-contains      a lot of spaces
-in the source     code,
-but the    browser 
-ignores it.
-</p>
-
-<p>
-The number of lines in a paragraph depends on the size of the browser window. If you resize the browser window, the number of lines in this paragraph will change.
-</p>
-
+<h1 style="text-align:center;">Centered Heading</h1>
+<p style="text-align:center;">Centered paragraph.</p>
+<h2>Le Quynh Anh</h2>
 </body>
 </html>
-
