--- a/demo.html
+++ b/demo.html
@@ -1,8 +1,10 @@
 <html>
 <body>
+<p>Le Quynh Anh</p>
+<p><b>This text is bold</b></p>
+<p><i>This text is italic</i></p>
+<p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
 
-<h1 style="text-align:center;">Centered Heading</h1>
-<p style="text-align:center;">Centered paragraph.</p>
-<h2>Le Quynh Anh</h2>
 </body>
 </html>
+
