--- a/demo.html
+++ b/demo.html
@@ -1,10 +1,9 @@
 <html>
 <body>
-<p>Le Quynh Anh</p>
-<p><b>This text is bold</b></p>
-<p><i>This text is italic</i></p>
-<p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
 
+<!-- This is a comment -->
+<p>This is a paragraph.</p>
+<!-- Comments are not displayed in the browser -->
+<p>Le Quynh Anh</p>
 </body>
 </html>
-
