--- a/demo.html
+++ b/demo.html
@@ -1,9 +1,12 @@
 <html>
 <body>
 
-<!-- This is a comment -->
-<p>This is a paragraph.</p>
-<!-- Comments are not displayed in the browser -->
-<p>Le Quynh Anh</p>
+<h1 style="border: 2px solid Tomato;">Le Quynh Anh</h1>
+
+<h1 style="border: 2px solid DodgerBlue;">Hello World</h1>
+
+<h1 style="border: 2px solid Violet;">Hello World</h1>
+
 </body>
 </html>
+
