--- a/demo.html
+++ b/demo.html
@@ -1,11 +1,15 @@
 <html>
+<head>
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
+</head>
 <body>
 
-<h1 style="border: 2px solid Tomato;">Le Quynh Anh</h1>
-
-<h1 style="border: 2px solid DodgerBlue;">Hello World</h1>
-
-<h1 style="border: 2px solid Violet;">Hello World</h1>
+<h1>Le Quynh Anh</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
