--- a/demo.html
+++ b/demo.html
@@ -1,15 +1,13 @@
 <html>
-<head>
-<style>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
-</style>
-</head>
 <body>
 
-<h1>Le Quynh Anh</h1>
-<p>This is a paragraph.</p>
+<h2>Absolute URLs</h2>
+<p><a href="https://www.w3.org/">W3C</a></p>
+<p><a href="https://www.google.com/">Google</a></p>
+
+<h2>Relative URLs</h2>
+<p><a href="html_images.asp">HTML Images</a></p>
+<p><a href="/css/default.asp">CSS Tutorial</a></p>
 
 </body>
 </html>
