--- a/demo.html
+++ b/demo.html
@@ -1,22 +1,14 @@
 <html>
 <body>
+<p>Le Quynh Anh</p>
 
-<h2>Le Quynh Anh</h2>
+<p>The SPAN element is an inline element, and will not start on a new line and only takes up as much width as necessary.</p>
 
-<ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>  
-
-<h2>An Ordered HTML List</h2>
-
-<ol>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ol> 
+<div style="background-color:black;color:white;padding:20px;">
+  <h2>London</h2>
+  <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+</div> 
 
 </body>
 </html>
-
