--- a/demo.html
+++ b/demo.html
@@ -1,14 +1,31 @@
 <html>
+<head>
+<style>
+.city {
+  background-color: tomato;
+  color: white;
+  border: 2px solid black;
+  margin: 20px;
+  padding: 20px;
+}
+</style>
+</head>
 <body>
-<p>Le Quynh Anh</p>
 
-<p>The SPAN element is an inline element, and will not start on a new line and only takes up as much width as necessary.</p>
-
-<div style="background-color:black;color:white;padding:20px;">
-  <h2>London</h2>
-  <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+<div class="city">
+<h2>London</h2>
+<p>London is the capital of England.</p>
 </div> 
+
+<div class="city">
+<h2>Paris</h2>
+<p>Paris is the capital of France.</p>
+</div>
+
+<div class="city">
+<h2>Tokyo</h2>
+<p>Tokyo is the capital of Japan.</p>
+</div>
 
 </body>
 </html>
