--- a/demo.html
+++ b/demo.html
@@ -1,39 +1,10 @@
 <html>
-<head>
-<style>
-/* Style the element with the id "myHeader" */
-#myHeader {
-  background-color: lightblue;
-  color: black;
-  padding: 40px;
-  text-align: center;
-}
-
-/* Style all elements with the class name "city" */
-.city {
-  background-color: tomato;
-  color: white;
-  padding: 10px;
-} 
-</style>
-</head>
 <body>
 
-<h2>Difference Between Class and ID</h2>
-<p>A class name can be used by multiple HTML elements, while an id name must only be used by one HTML element within the page:</p>
+<h2>Le Quynh Anh</h2>
+<p>You can use the height and width attributes to specify the size of the iframe:</p>
 
-<!-- An element with a unique id -->
-<h1 id="myHeader">My Cities</h1>
+<iframe src="demo_iframe.htm" height="200" width="300" title="Iframe Example"></iframe>
 
-<!-- Multiple elements with same class -->
-<h2 class="city">London</h2>
-<p>London is the capital of England.</p>
-
-<h2 class="city">Paris</h2>
-<p>Paris is the capital of France.</p>
-
-<h2 class="city">Tokyo</h2>
-<p>Tokyo is the capital of Japan.</p>
-<h2 class="city">Le Quynh Anh</h2>
 </body>
 </html>
