--- a/demo.html
+++ b/demo.html
@@ -1,10 +1,20 @@
 <html>
 <body>
 
-<h2>Le Quynh Anh</h2>
-<p>You can use the height and width attributes to specify the size of the iframe:</p>
+<h1>My First JavaScript</h1>
 
-<iframe src="demo_iframe.htm" height="200" width="300" title="Iframe Example"></iframe>
+<p id="demo">JavaScript can change the style of an HTML element.</p>
+<p id="demo">Le Quynh Anh</p>
+
+<script>
+function myFunction() {
+  document.getElementById("demo").style.fontSize = "25px"; 
+  document.getElementById("demo").style.color = "red";
+  document.getElementById("demo").style.backgroundColor = "yellow";        
+}
+</script>
+
+<button type="button" onclick="myFunction()">Click Me!</button>
 
 </body>
 </html>
