HTML - The Head Element

--- a/demo.html
+++ b/demo.html
@@ -1,20 +1,19 @@
 <html>
+<head>
+  <title>Page Title</title>
+  <style>
+    body {background-color: powderblue;}
+    h1 {color: red;}
+    p {color: blue;}
+  </style>
+</head>  
 <body>
 
-<h1>My First JavaScript</h1>
-
-<p id="demo">JavaScript can change the style of an HTML element.</p>
-<p id="demo">Le Quynh Anh</p>
-
-<script>
-function myFunction() {
-  document.getElementById("demo").style.fontSize = "25px"; 
-  document.getElementById("demo").style.color = "red";
-  document.getElementById("demo").style.backgroundColor = "yellow";        
-}
-</script>
-
-<button type="button" onclick="myFunction()">Click Me!</button>
-
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+  
+<p>The content of the body element is displayed in the browser window.</p>
+<p>The content of the title element is displayed in the browser tab, in favorites and in search-engine results.</p>
+<p>Le Quynh Anh</p>
 </body>
 </html>
