--- a/demo.html
+++ b/demo.html
@@ -1,19 +1,17 @@
 <html>
 <body>
 
-<h2>Password field</h2>
+<h1>The input size attribute</h1>
 
-<p>The <strong>input type="password"</strong> defines a password field:</p>
+<p>The size attribute specifies the width (in characters) of an input field:</p>
 
 <form action="/action_page.php">
-  <label for="username">Username:</label><br>
-  <input type="text" id="username" name="username"><br>
-  <label for="pwd">Password:</label><br>
-  <input type="password" id="pwd" name="pwd"><br><br>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" size="50"><br>
+  <label for="pin">PIN:</label><br>
+  <input type="text" id="pin" name="pin" size="4"><br><br>
   <input type="submit" value="Submit">
 </form>
-
-<p>The characters in a password field are masked (shown as asterisks or circles).</p>
 
 </body>
 </html>
