--- a/demo.html
+++ b/demo.html
@@ -1,19 +1,20 @@
 <html>
 <body>
 
-<h1>The input size attribute</h1>
+<h1>The input form attribute</h1>
 
-<p>The size attribute specifies the width (in characters) of an input field:</p>
+<p>The form attribute specifies the form an input element belongs to.</p>
 
-<form action="/action_page.php">
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" size="50"><br>
-  <label for="pin">PIN:</label><br>
-  <input type="text" id="pin" name="pin" size="4"><br><br>
+<form action="/action_page.php" id="form1">
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
   <input type="submit" value="Submit">
 </form>
 
+<p>The "Last name" field below is outside the form element, but still part of the form.</p>
+
+<label for="lname">Last name:</label>
+<input type="text" id="lname" name="lname" form="form1">
+
 </body>
 </html>
-
-
