--- a/demo.html
+++ b/demo.html
@@ -1,20 +1,16 @@
 <html>
 <body>
 
-<h1>The input form attribute</h1>
+<canvas id="myCanvas" width="200" height="100" style="border:1px solid #d3d3d3;">
+Your browser does not support the HTML canvas tag.</canvas>
 
-<p>The form attribute specifies the form an input element belongs to.</p>
-
-<form action="/action_page.php" id="form1">
-  <label for="fname">First name:</label>
-  <input type="text" id="fname" name="fname"><br><br>
-  <input type="submit" value="Submit">
-</form>
-
-<p>The "Last name" field below is outside the form element, but still part of the form.</p>
-
-<label for="lname">Last name:</label>
-<input type="text" id="lname" name="lname" form="form1">
+<script>
+var c = document.getElementById("myCanvas");
+var ctx = c.getContext("2d");
+ctx.beginPath();
+ctx.arc(95,50,40,0,2*Math.PI);
+ctx.stroke();
+</script> 
 
 </body>
 </html>
