--- a/demo.html
+++ b/demo.html
@@ -1,12 +1,11 @@
 <html>
 <body>
 
-<svg width="400" height="180">
-  <rect x="50" y="20" rx="20" ry="20" width="150" height="150"
-  style="fill:red;stroke:black;stroke-width:5;opacity:0.5" />
-Sorry, your browser does not support inline SVG.
-</svg>
+<video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
 
 </body>
 </html>
-
