--- a/demo.html
+++ b/demo.html
@@ -1,11 +1,9 @@
 <html>
 <body>
 
-<audio controls autoplay>
-  <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-
+<object data="audi.jpeg"></object>
+ 
 </body>
 </html>
+
+
