--- a/demo.html
+++ b/demo.html
@@ -1,28 +1,37 @@
 <html>
-<body>
-<h1>HTML Geolocation</h1>
-<p>Le Quynh Anh</p>
-
-<button onclick="getLocation()">Try It</button>
-
-<p id="demo"></p>
-
+<head>
+<style>
+#div1 {
+  width: 350px;
+  height: 70px;
+  padding: 10px;
+  border: 1px solid #aaaaaa;
+}
+</style>
 <script>
-const x = document.getElementById("demo");
-
-function getLocation() {
-  if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(showPosition);
-  } else { 
-    x.innerHTML = "Geolocation is not supported by this browser.";
-  }
+function allowDrop(ev) {
+  ev.preventDefault();
 }
 
-function showPosition(position) {
-  x.innerHTML = "Latitude: " + position.coords.latitude + 
-  "<br>Longitude: " + position.coords.longitude;
+function drag(ev) {
+  ev.dataTransfer.setData("text", ev.target.id);
+}
+
+function drop(ev) {
+  ev.preventDefault();
+  var data = ev.dataTransfer.getData("text");
+  ev.target.appendChild(document.getElementById(data));
 }
 </script>
+</head>
+<body>
+
+<p>Drag the W3Schools image into the rectangle:</p>
+<p>Le Quynh Anh</p>
+
+<div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+<br>
+<img id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">
 
 </body>
 </html>
